# EsqueletoVM

./: .gitignore  .gitmodules  .replit  CMakeLists.txt  README.md  replit.nix
executables/: hello.dump  hello.elf  hex2bin.py  wasm3.dump  wasm3.elf
src/: main.c
src/RV32I/: RV32I.c  RV32I.h
